解决warning